--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <title>Tickit</title>
+    <title>Sentiflow</title>
     <base href="/" />
     <script src="./bundle.js" defer></script>
     <link rel="stylesheet" href="/index.css" />
